2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: cleaned source code. And added function
	"read_recursive_dir" to give a content of dir in a array.
	
	* include/functions_config.php: added $config['collection_max_size'].

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/networkmap.php: fixed order in combo box of zoom
	page of Network Map
	Fixes: #3026857

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/networkmap.php: fixed changing map layout type when 
	you pass from full screen to normal screen or backwards
	Fixes: #3013601

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.editor.php: fixed order in 
	Period combo box of Module Graph
	Fixes: #3014274

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/servers/plugin.php: fixed the description text of ajax return
	when translate the &gt; or &lt; to < or > instead to keep the entity.
	Fixes: #3026785

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: added to check zip library for the filemanager.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: added in source code lines to test
	hash of directories or files for give more security to filemanager.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: added var global through $config to
	return status of operation. And clean messages of filemanager.

2010-07-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: changed in function "get_db_all_rows_filter" the
	parameter $filter to set empty array as default value.

2010-07-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: added const MIME_TEXT. added source
	code to handler the updload files, zips, delete files/dir and create text