@@ -1,5 +1,10 @@
 2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/functions_filemanager.php: added hash2 parameter for to use in
+	directory navigation.
+
+2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/functions_filemanager.php: cleaned source code. And added function
 	"read_recursive_dir" to give a content of dir in a array.
 	
